<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Neighbourhood Quest</string>
    <string name="action_settings">Опции</string>
    <string name="menu">Меню</string>
    <string name="start_game">Започни</string>
    <string name="end_game">Изход</string>
    <string name="about_game">За играта</string>
    <string name="status_game">Статус</string>
    <string name="about_text">Кметът на Лозенец е решил да направи местните забележителности по-добре известни на жителите на квартала.
         Точно за тази цел, а и за добра оценка по Андроид курса, беше направена тази игра! 
         Целта й е да отговорите на възможно най-много въпроси вярно, като така трупате своя прогрес.
         За да видите даден въпрос, трябва да сте на по-малко от 40 метра разстояние от мястото, за което той се отнася.
         Ориентирайте се по картата кои въпроси са отворени и накъде трябва да ходите!
         В началото са видими само някои въпроси, но с всеки верен отговор ще се отварят нови!</string>
    <string name="back">        &lt; &lt;</string>
    <string name="forward">> ></string>
    <string name="ok">OK</string>
    <string name="progress">Прогрес досега:</string>
    <string name="openQuestions">Отворени въпроси:</string>
    <string name="rightQuestions">Правилни отговори:</string>
    <string name="wrongQuestions">Грешни отговори:</string>
    

</resources>