<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#0F4766"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dip"
                android:text="@string/progress"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/progressValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:gravity="right"
                android:textColor="#ffffff" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/custom_progressbar"    />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/openText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dip"
                android:text="@string/openQuestions"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/openValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:gravity="right"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/rightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dip"
                android:text="@string/rightQuestions"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/rightValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:gravity="right"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/wrongText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dip"
                android:text="@string/wrongQuestions"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/wrongValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:gravity="right"
                android:textColor="#ffffff" />
        </LinearLayout>

        <Button
            android:id="@+id/backBtn"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_selector"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:text="@string/ok"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/logo2" />

</RelativeLayout>