<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#0F4766"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="20dip" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/playBtn"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:text="@string/start_game"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/statusBtn"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:text="@string/status_game"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/aboutBtn"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:text="@string/about_game"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/exitBtn"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:text="@string/end_game"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/logo2" />

</RelativeLayout>